--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,24 @@ body {
   background-color: #011F3F;
 }
 
+.start-button {
+  background-color: #fef2bf;
+  border: 8px solid black;
+  color: #001F3f;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 20px;
+  border-radius: 8px;
+}
+
+.start-button:hover {
+  background-color: #e7e7e7;
+  color: black;
+}
+
+
 #level-title {
   font-family: 'Press Start 2P', cursive;
   font-size: 3rem;
